[package]
name = "tesseract-plumbing"
version = "0.5.1"
authors = ["Chris Couzens <ccouzens@gmail.com>"]
edition = "2018"
description = "Safe wrapper of `tesseract-sys`"
homepage = "https://github.com/ccouzens/tesseract-plumbing"
repository = "https://github.com/ccouzens/tesseract-plumbing"
readme = "README.md"
keywords = ["leptonica", "tesseract", "ocr", "image"]
license = "MIT"
[dependencies]
tesseract-sys = { git = "https://github.com/vim-zz/tesseract-sys", branch = "fix_macos" }
leptonica-plumbing = { git = "https://github.com/vim-zz/leptonica-plumbing", branch = "fix_macos" }
thiserror = "1.0"

[dev-dependencies]
image = "0.23.14"